JS and CSS to fix the overflow issue, plus toggle the button's icon

--- a/media/com_code/css/default.css
+++ b/media/com_code/css/default.css
@@ -53,4 +53,15 @@ span.commit-owner {
     font-weight: bold;
 }
 
+/* Advanced search chosen overflow fixes */
+
+#filters-advanced.overflow {
+	overflow: visible;
+}
+
+#filters-advanced select,
+#filters-advanced button {
+	vertical-align: top;
+}
+
 
